# timey

./: .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  TODO.md
design/: proposal-2017-03-23.md  proposal.md
doc/: CMakeLists.txt  Doxyfile.in
examples/: CMakeLists.txt  example_timer.cpp  timer.cpp  timer_basics.cpp  timerset_basics.cpp
include/: timer.hpp  timerset.hpp  timey.hpp  utils.hpp
src/: CMakeLists.txt  timer.cpp
test/: CMakeLists.txt  CMakeLists.txt.in  humanize_test.cpp  timer_test.cpp  timerset_test.cpp  utils_test.cpp
